--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "maciej-sz/nbp-php",
+    "name": "wojcikmat/nbp-php",
     "description": "API for accessing NBP (Narodowy Bank Polski) currency rates in PHP",
     "keywords": ["nbp", "currency", "money"],
     "type": "library",
